--- a/src/ApplicationUI/teamTaskView.fxml
+++ b/src/ApplicationUI/teamTaskView.fxml
@@ -27,7 +27,7 @@
                             <children>
                                 <AnchorPane>
                                     <children>
-                                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="579.0" styleClass="background" stylesheets="@application.css">
+                                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="579.0" styleClass="titleBannerBackground" stylesheets="@application.css">
                                             <children>
                                                 <Label layoutX="20.0" layoutY="27.0" styleClass="font" stylesheets="@application.css" text="Team Task View" textAlignment="CENTER" textFill="WHITE">
                                                     <font>
