--- a/src/ApplicationUI/welcome.fxml
+++ b/src/ApplicationUI/welcome.fxml
@@ -3,8 +3,6 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -21,26 +19,20 @@
                         <Font name="Calibri Bold" size="36.0" />
                     </font>
                 </Label>
-                <Label layoutX="404.0" layoutY="120.0" text="Login to continue" textFill="WHITE" />
+                <Label fx:id="label_info" alignment="CENTER" layoutX="363.0" layoutY="120.0" prefHeight="18.0" prefWidth="185.0" text="Login to continue" textAlignment="CENTER" textFill="WHITE" />
                 <Label layoutX="241.0" layoutY="217.0" />
-            <TextField layoutX="379.0" layoutY="143.0" promptText="User Name" />
-            <TextField layoutX="379.0" layoutY="187.0" promptText="Password" />
-            <Button layoutX="355.0" layoutY="280.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="200.0" stylesheets="@application.css" text="Login">
+            <TextField fx:id="textBox_userName" layoutX="379.0" layoutY="143.0" promptText="User Name" />
+            <TextField fx:id="textBox_password" layoutX="379.0" layoutY="174.0" promptText="Password" />
+            <Button fx:id="button_login" layoutX="355.0" layoutY="280.0" mnemonicParsing="false" onAction="#login" prefHeight="36.0" prefWidth="200.0" stylesheets="@application.css" text="Login">
                <styleClass>
                   <String fx:value="primaryButton" />
                   <String fx:value="Button" />
                </styleClass></Button>
-            <Button layoutX="355.0" layoutY="325.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="37.0" prefWidth="200.0" stylesheets="@application.css" text="Register">
+            <Button fx:id="button_register" layoutX="355.0" layoutY="325.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="37.0" prefWidth="200.0" stylesheets="@application.css" text="Register">
                <styleClass>
                   <String fx:value="secondaryButton" />
                   <String fx:value="Button" />
                </styleClass></Button>
-            <MenuButton layoutX="389.0" layoutY="235.0" mnemonicParsing="false" stylesheets="@application.css" text="Select User Role">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </MenuButton>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="381.0" layoutY="-30.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Managei.png" />
