--- a/src/ApplicationUI/completeTask.fxml
+++ b/src/ApplicationUI/completeTask.fxml
@@ -4,83 +4,73 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.completeTaskController">
     <children>
-        <AnchorPane prefHeight="606.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
-            <children>
-                <SplitPane dividerPositions="0.2760934393638171" prefHeight="605.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
-                    <items>
-                        <AnchorPane fx:id="leftBanner" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="220.0" stylesheets="@application.css" SplitPane.resizableWithParent="false">
-                            <styleClass>
-                                <String fx:value="background" />
-                                <String fx:value="teamDashboardBanner" />
-                            </styleClass></AnchorPane>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
-                            <children>
-                        <AnchorPane>
-                           <children>
-                                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="579.0" styleClass="titleBannerBackground" stylesheets="@application.css">
-                                            <children>
-                                                <Label layoutX="20.0" layoutY="27.0" styleClass="font" stylesheets="@application.css" text="Complete Assigned Task " textAlignment="CENTER" textFill="WHITE">
-                                                    <font>
-                                                        <Font size="36.0" />
-                                                    </font>
-                                                </Label>
-                                    <ImageView fitHeight="83.0" fitWidth="111.0" layoutX="481.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@memberTaskTopRight.gif" />
-                                       </image>
-                                    </ImageView>
-                                            </children>
-                                        </AnchorPane>
-                                        <AnchorPane layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="579.0" styleClass="background" stylesheets="@application.css">
-                                            <children>
-                                    <TableView fx:id="taskViewTable" layoutX="22.0" layoutY="17.0" prefHeight="274.0" prefWidth="534.0" styleClass="tableView" stylesheets="@application.css">
-                                      <columns>
-                                        <TableColumn fx:id="taskColumn" prefWidth="52.0" text="TaskID" />
-                                        <TableColumn fx:id="nameColumn" prefWidth="113.5999755859375" text="Name" />
-                                          <TableColumn fx:id="statusColumn" prefWidth="88.0" text="Status" />
-                                          <TableColumn fx:id="detailColumn" prefWidth="280.0" text="Detail" />
-                                      </columns>
-                                    </TableView>
-                                    <Button fx:id="backButton" layoutX="246.0" layoutY="431.0" mnemonicParsing="false" onAction="#goToTeamDashboard" style="-fx-font-size: 18;" stylesheets="@application.css" text="Go Back">
-                                       <styleClass>
-                                          <String fx:value="primaryButton" />
-                                          <String fx:value="font" />
-                                          <String fx:value="Button" />
-                                       </styleClass>
-                                    </Button>
-                                    <Separator layoutY="-1.0" prefHeight="0.0" prefWidth="578.0" />
-                                    <Label layoutX="153.0" layoutY="330.0" styleClass="font" stylesheets="@application.css" text="Enter Task ID: " textFill="WHITE">
-                                       <font>
-                                          <Font size="20.0" />
-                                       </font>
-                                    </Label>
-                                    <TextField fx:id="taskIDField" layoutX="277.0" layoutY="329.0" promptText="Task ID" />
-                                    <Button fx:id="completeTaskButton" layoutX="223.0" layoutY="367.0" mnemonicParsing="false" onAction="#completeAssignedTask" style="-fx-font-size: 18;" stylesheets="@application.css" text="Complete Task">
-                                       <styleClass>
-                                          <String fx:value="primaryButton" />
-                                          <String fx:value="font" />
-                                          <String fx:value="Button" />
-                                       </styleClass>
-                                    </Button>
-                                            </children>
-                                        </AnchorPane>
-                           </children>
-                        </AnchorPane>
-                            </children></AnchorPane>
-                    </items>
-                </SplitPane>
-            </children>
-        </AnchorPane>
+                <AnchorPane layoutY="-2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="806.0" styleClass="titleBannerBackground" stylesheets="@application.css">
+                    <children>
+                        <Label layoutX="20.0" layoutY="27.0" styleClass="font" stylesheets="@application.css" text="Complete Assigned Task " textAlignment="CENTER" textFill="WHITE">
+                            <font>
+                                <Font size="36.0" />
+                            </font>
+                        </Label>
+            <ImageView fitHeight="83.0" fitWidth="111.0" layoutX="709.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@memberTaskTopRight.gif" />
+               </image>
+            </ImageView>
+                    </children>
+                </AnchorPane>
+      <AnchorPane layoutY="87.0" prefHeight="513.0" prefWidth="806.0">
+         <children>
+            <Separator prefHeight="0.0" prefWidth="806.0" />
+            <Pane layoutX="110.0" layoutY="17.0" prefHeight="479.0" prefWidth="586.0" styleClass="card" stylesheets="@application.css">
+               <children>
+                  <TableView fx:id="taskViewTable" layoutX="26.0" layoutY="22.0" prefHeight="274.0" prefWidth="534.0" stylesheets="@application.css">
+                    <columns>
+                      <TableColumn fx:id="taskColumn" prefWidth="52.0" text="TaskID" />
+                      <TableColumn fx:id="nameColumn" prefWidth="113.5999755859375" text="Name" />
+                        <TableColumn fx:id="statusColumn" prefWidth="88.0" text="Status" />
+                        <TableColumn fx:id="detailColumn" prefWidth="280.0" text="Detail" />
+                    </columns>
+                  </TableView>
+                  <Button fx:id="backButton" layoutX="241.0" layoutY="421.0" mnemonicParsing="false" onAction="#goToTeamDashboard" style="-fx-font-size: 18;" stylesheets="@application.css" text="Go Back" textFill="WHITE">
+                     <styleClass>
+                        <String fx:value="secondaryButton" />
+                        <String fx:value="font" />
+                        <String fx:value="Button" />
+                     </styleClass>
+                  </Button>
+                  <Label layoutX="152.0" layoutY="329.0" styleClass="font" stylesheets="@application.css" text="Enter Task ID: " textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="taskIDField" layoutX="285.0" layoutY="328.0" promptText="Task ID" />
+                  <Button fx:id="completeTaskButton" layoutX="218.0" layoutY="374.0" mnemonicParsing="false" onAction="#completeAssignedTask" style="-fx-font-size: 18;" stylesheets="@application.css" text="Complete Task">
+                     <styleClass>
+                        <String fx:value="primaryButton" />
+                        <String fx:value="font" />
+                        <String fx:value="Button" />
+                     </styleClass>
+                  </Button>
+                  <Text fx:id="errorTextField" fill="RED" layoutX="156.0" layoutY="387.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="font">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
