--- a/src/ApplicationUI/progressGraph.fxml
+++ b/src/ApplicationUI/progressGraph.fxml
@@ -11,58 +11,58 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.progressGraphController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.progressGraphController">
     <children>
-        <AnchorPane prefHeight="605.0" prefWidth="800.0">
+        <AnchorPane prefHeight="605.0" prefWidth="800.0" styleClass="background">
             <children>
-                <SplitPane dividerPositions="0.2760934393638171" layoutY="-1.0" prefHeight="606.0" prefWidth="806.0">
+                <SplitPane layoutY="-1.0" prefHeight="606.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
                     <items>
-                        <AnchorPane fx:id="leftBanner" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="220.0" stylesheets="@application.css" SplitPane.resizableWithParent="false">
-                            <styleClass>
-                                <String fx:value="background" />
-                                <String fx:value="teamDashboardBanner" />
-                            </styleClass></AnchorPane>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
                             <children>
                                 <AnchorPane>
                                     <children>
-                                        <AnchorPane layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="90.0" prefWidth="578.0" styleClass="titleBannerBackground" stylesheets="@application.css">
+                                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="806.0" styleClass="titleBannerBackground" stylesheets="@application.css">
                                             <children>
                                                 <Label layoutX="41.0" layoutY="26.0" styleClass="font" stylesheets="@application.css" text="Team Progress Graph" textAlignment="CENTER" textFill="WHITE">
                                                     <font>
                                                         <Font size="36.0" />
                                                     </font>
                                                 </Label>
-                                                <ImageView fitHeight="75.0" fitWidth="92.0" layoutX="489.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                                                <ImageView fitHeight="75.0" fitWidth="92.0" layoutX="710.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                                                     <image>
                                                         <Image url="@graphBannerTop.gif" />
                                                     </image>
                                                 </ImageView>
                                             </children>
                                         </AnchorPane>
-                                        <AnchorPane layoutX="-1.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="579.0" styleClass="background" stylesheets="@application.css">
+                                        <AnchorPane layoutX="-2.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
                                             <children>
-                                                <Button fx:id="goBackButton" layoutX="230.0" layoutY="436.0" mnemonicParsing="false" onAction="#toTeamDashboard" prefHeight="40.0" prefWidth="119.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
-                                                    <styleClass>
-                                                        <String fx:value="Button" />
-                                                        <String fx:value="font" />
-                                                        <String fx:value="primaryButton" />
-                                                    </styleClass>
-                                                    <font>
-                                                        <Font size="14.0" />
-                                                    </font>
-                                                </Button>
-                                                <Separator layoutX="-1.0" layoutY="-1.0" prefHeight="2.0" prefWidth="579.0" />
-                                    <BarChart fx:id="progressGraph" layoutX="39.0" layoutY="14.0" style="-fx-background-color: white;">
-                                      <xAxis>
-                                        <CategoryAxis side="BOTTOM" />
-                                      </xAxis>
-                                      <yAxis>
-                                        <NumberAxis side="LEFT" />
-                                      </yAxis>
-                                    </BarChart>
+                                                <Separator layoutX="-1.0" prefHeight="2.0" prefWidth="806.0" />
+                                    <Pane layoutX="118.0" layoutY="12.0" prefHeight="475.0" prefWidth="554.0" styleClass="card" stylesheets="@application.css">
+                                       <children>
+                                                      <Button fx:id="goBackButton" layoutX="218.0" layoutY="422.0" mnemonicParsing="false" onAction="#toTeamDashboard" prefHeight="40.0" prefWidth="119.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
+                                                          <styleClass>
+                                                              <String fx:value="Button" />
+                                                              <String fx:value="font" />
+                                                              <String fx:value="secondaryButton" />
+                                                          </styleClass>
+                                                          <font>
+                                                              <Font size="14.0" />
+                                                          </font>
+                                                      </Button>
+                                          <BarChart fx:id="progressGraph" layoutX="27.0" layoutY="14.0" style="-fx-background-color: white;">
+                                            <xAxis>
+                                              <CategoryAxis side="BOTTOM" />
+                                            </xAxis>
+                                            <yAxis>
+                                              <NumberAxis side="LEFT" />
+                                            </yAxis>
+                                          </BarChart>
+                                       </children>
+                                    </Pane>
                                             </children>
                                         </AnchorPane>
                                     </children>
