--- a/src/ApplicationUI/teamDashboard.fxml
+++ b/src/ApplicationUI/teamDashboard.fxml
@@ -4,54 +4,39 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.teamDashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.teamDashboardController">
    <children>
       <AnchorPane prefHeight="605.0" prefWidth="800.0">
          <children>
-            <SplitPane dividerPositions="0.2760934393638171" layoutY="-1.0" prefHeight="606.0" prefWidth="806.0">
-              <items>
-                <AnchorPane fx:id="leftBanner" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="220.0" stylesheets="@application.css" SplitPane.resizableWithParent="false">
-                     <styleClass>
-                        <String fx:value="background" />
-                        <String fx:value="teamDashboardBanner" />
-                     </styleClass></AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <AnchorPane>
                      <children>
-                        <AnchorPane>
+                      <AnchorPane layoutY="-2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="94.0" prefWidth="800.0" styleClass="titleBannerBackground" stylesheets="@application.css">
                            <children>
-                            <AnchorPane layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="90.0" prefWidth="578.0" styleClass="titleBannerBackground" stylesheets="@application.css">
+                              <Label layoutX="41.0" layoutY="26.0" styleClass="font" stylesheets="@application.css" text="Team Dashboard" textAlignment="CENTER" textFill="WHITE">
+                                 <font>
+                                    <Font size="36.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fitHeight="75.0" fitWidth="92.0" layoutX="693.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@teamDashTopBanner.gif" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane layoutX="-1.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css">
+                           <children>
+                              <Pane layoutX="137.0" layoutY="43.0" prefHeight="426.0" prefWidth="526.0" styleClass="card" stylesheets="@application.css">
                                  <children>
-                                    <Label layoutX="41.0" layoutY="26.0" styleClass="font" stylesheets="@application.css" text="Team Dashboard" textAlignment="CENTER" textFill="WHITE">
-                                       <font>
-                                          <Font size="36.0" />
-                                       </font>
-                                    </Label>
-                                    <ImageView fitHeight="75.0" fitWidth="92.0" layoutX="465.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@teamDashTopBanner.gif" />
-                                       </image>
-                                    </ImageView>
-                                 </children>
-                              </AnchorPane>
-                            <AnchorPane layoutX="-1.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="579.0" styleClass="background" stylesheets="@application.css">
-                                 <children>
-                                    <Button fx:id="viewOwnTasksButton" layoutX="327.0" layoutY="379.0" mnemonicParsing="false" onAction="#viewTeamTasks" prefHeight="52.0" prefWidth="154.0" stylesheets="@application.css" text="Team Tasks" textFill="WHITE">
-                                       <styleClass>
-                                          <String fx:value="Button" />
-                                          <String fx:value="font" />
-                                          <String fx:value="secondaryButton" />
-                                       </styleClass>
-                                       <font>
-                                          <Font size="14.0" />
-                                       </font>
-                                    </Button>
-                                    <Button fx:id="suggestNewTaskButton" layoutX="99.0" layoutY="290.0" mnemonicParsing="false" onAction="#suggestNewTask" prefHeight="52.0" prefWidth="159.0" stylesheets="@application.css" text="Suggest Task">
+                                    <Button fx:id="viewOwnTasksButton" layoutX="294.0" layoutY="354.0" mnemonicParsing="false" onAction="#viewTeamTasks" prefHeight="52.0" prefWidth="154.0" stylesheets="@application.css" text="Team Tasks" textFill="WHITE">
                                        <styleClass>
                                           <String fx:value="Button" />
                                           <String fx:value="font" />
@@ -61,53 +46,62 @@
                                           <Font size="14.0" />
                                        </font>
                                     </Button>
-                                    <Button fx:id="completeTaskButton" layoutX="101.0" layoutY="379.0" mnemonicParsing="false" onAction="#completeTask" prefHeight="52.0" prefWidth="154.0" stylesheets="@application.css" text="Own Tasks" textFill="WHITE">
+                                    <Button fx:id="suggestNewTaskButton" layoutX="66.0" layoutY="276.0" mnemonicParsing="false" onAction="#suggestNewTask" prefHeight="52.0" prefWidth="159.0" stylesheets="@application.css" text="Suggest Task">
                                        <styleClass>
                                           <String fx:value="Button" />
                                           <String fx:value="font" />
-                                          <String fx:value="secondaryButton" />
+                                          <String fx:value="primaryButton" />
                                        </styleClass>
                                        <font>
                                           <Font size="14.0" />
                                        </font>
                                     </Button>
-                                    <Label fx:id="userLabel" layoutX="51.0" layoutY="72.0" styleClass="font" stylesheets="@application.css" text="User: " textFill="WHITE">
+                                    <Button fx:id="completeTaskButton" layoutX="68.0" layoutY="354.0" mnemonicParsing="false" onAction="#completeTask" prefHeight="52.0" prefWidth="154.0" stylesheets="@application.css" text="Own Tasks" textFill="WHITE">
+                                       <styleClass>
+                                          <String fx:value="Button" />
+                                          <String fx:value="font" />
+                                          <String fx:value="primaryButton" />
+                                       </styleClass>
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Button>
+                                    <Label fx:id="userLabel" layoutX="18.0" layoutY="58.0" styleClass="font" stylesheets="@application.css" text="User: " textFill="WHITE">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="userNameLabel" layoutX="113.0" layoutY="72.0" styleClass="font" stylesheets="@application.css" text="username" textFill="WHITE">
+                                    <Label fx:id="userNameLabel" layoutX="80.0" layoutY="58.0" styleClass="font" stylesheets="@application.css" text="username" textFill="WHITE">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="assignedTaskLabel" layoutX="51.0" layoutY="116.0" styleClass="font" stylesheets="@application.css" text="Assigned Tasks:" textFill="WHITE">
+                                    <Label fx:id="assignedTaskLabel" layoutX="18.0" layoutY="102.0" styleClass="font" stylesheets="@application.css" text="Assigned Tasks:" textFill="WHITE">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="assignedTaskCountLabel" layoutX="221.0" layoutY="116.0" styleClass="font" stylesheets="@application.css" text="0" textFill="WHITE">
+                                    <Label fx:id="assignedTaskCountLabel" layoutX="188.0" layoutY="102.0" styleClass="font" stylesheets="@application.css" text="0" textFill="WHITE">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="CompletedTaskLabel" layoutX="51.0" layoutY="160.0" styleClass="font" stylesheets="@application.css" text="Completed Tasks:" textFill="WHITE">
+                                    <Label fx:id="CompletedTaskLabel" layoutX="18.0" layoutY="146.0" styleClass="font" stylesheets="@application.css" text="Completed Tasks:" textFill="WHITE">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="completedTaskCountLabel" layoutX="239.0" layoutY="162.0" styleClass="font" stylesheets="@application.css" text="0" textFill="WHITE">
+                                    <Label fx:id="completedTaskCountLabel" layoutX="206.0" layoutY="148.0" styleClass="font" stylesheets="@application.css" text="0" textFill="WHITE">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <Separator layoutX="-1.0" layoutY="-1.0" prefHeight="2.0" prefWidth="579.0" />
-                                    <ImageView fitHeight="243.0" fitWidth="220.0" layoutX="321.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fitHeight="243.0" fitWidth="220.0" layoutX="288.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@teamDashTopRight.png" />
                                        </image>
                                     </ImageView>
-                                    <Button fx:id="progessGraphButton" layoutX="327.0" layoutY="290.0" mnemonicParsing="false" onAction="#showProgressGraph" prefHeight="52.0" prefWidth="154.0" stylesheets="@application.css" text="Progress Graph">
+                                    <Button fx:id="progessGraphButton" layoutX="294.0" layoutY="276.0" mnemonicParsing="false" onAction="#showProgressGraph" prefHeight="52.0" prefWidth="154.0" stylesheets="@application.css" text="Progress Graph">
                                        <styleClass>
                                           <String fx:value="Button" />
                                           <String fx:value="font" />
@@ -118,12 +112,14 @@
                                        </font>
                                     </Button>
                                  </children>
-                              </AnchorPane>
+                              </Pane>
+                              <Separator layoutX="-1.0" layoutY="-1.0" prefHeight="0.0" prefWidth="800.0" />
                            </children>
                         </AnchorPane>
-                     </children></AnchorPane>
-              </items>
-            </SplitPane>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
