--- a/src/ApplicationUI/suggestTask.fxml
+++ b/src/ApplicationUI/suggestTask.fxml
@@ -33,7 +33,7 @@
                                                 </Label>
                                     <ImageView fitHeight="90.0" fitWidth="122.0" layoutX="702.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@taskSuggession.gif" />
+                                          <Image url="@../images/taskSuggession.gif" />
                                        </image>
                                     </ImageView>
                                             </children>
