--- a/src/ApplicationUI/registerUserPage.fxml
+++ b/src/ApplicationUI/registerUserPage.fxml
@@ -11,17 +11,16 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.registerUserController">
    <top>
-      <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #2a323c;" styleClass="background" stylesheets="@application.css" BorderPane.alignment="CENTER">
          <children>
             <Label alignment="CENTER" layoutX="280.0" layoutY="100.0" text="Register User" textFill="WHITE">
                <font>
                   <Font name="SansSerif Regular" size="36.0" />
                </font>
             </Label>
-            <Pane layoutX="170.0" layoutY="171.0" prefHeight="327.0" prefWidth="441.0" styleClass="card" stylesheets="@application.css">
+            <Pane layoutX="180.0" layoutY="172.0" prefHeight="327.0" prefWidth="441.0" styleClass="card" stylesheets="@application.css">
                <children>
                   <TextField fx:id="firstName_textField" layoutX="146.0" layoutY="53.0" promptText="First Name" />
                   <TextField fx:id="lastName_textField" layoutX="146.0" layoutY="83.0" promptText="Last Name" />
