--- a/src/ApplicationUI/teamTaskView.fxml
+++ b/src/ApplicationUI/teamTaskView.fxml
@@ -35,14 +35,14 @@
                <children>
                               <TableView fx:id="taskViewTable" layoutX="17.0" layoutY="16.0" prefHeight="426.0" prefWidth="570.0" styleClass="tableView" stylesheets="@application.css">
                                   <columns>
-                                      <TableColumn fx:id="taskColumn" prefWidth="52.0" text="TaskID" />
-                        <TableColumn fx:id="memberNameColumn" prefWidth="97.60003662109375" text="Member Name" />
-                                      <TableColumn fx:id="tasknameColumn" prefWidth="71.99998474121094" text="Task Name" />
-                                      <TableColumn fx:id="detailColumn" prefWidth="301.6000213623047" text="Detail" />
-                                      <TableColumn fx:id="statusColumn" prefWidth="45.5999755859375" text="Status" />
+                                      <TableColumn fx:id="taskIDColumn" prefWidth="52.0" text="TaskID" />
+                        <TableColumn fx:id="memberIDColumn" prefWidth="71.20001220703125" text="Member ID" />
+                                      <TableColumn fx:id="tasknameColumn" prefWidth="99.20001220703125" text="Task Name" />
+                                      <TableColumn fx:id="detailColumn" prefWidth="296.79998779296875" text="Detail" />
+                                      <TableColumn fx:id="statusColumn" prefWidth="51.2000732421875" text="Status" />
                                   </columns>
                               </TableView>
-                              <Button fx:id="backButton" layoutX="258.0" layoutY="451.0" mnemonicParsing="false" onAction="#goToTeamDashboard" prefHeight="32.0" prefWidth="89.0" style="-fx-font-size: 18;" stylesheets="@application.css" text="Go Back" textFill="WHITE">
+                              <Button fx:id="backButton" layoutX="253.0" layoutY="449.0" mnemonicParsing="false" onAction="#goToTeamDashboard" prefHeight="34.0" prefWidth="99.0" style="-fx-font-size: 18;" stylesheets="@application.css" text="Go Back" textFill="WHITE">
                                   <styleClass>
                                       <String fx:value="secondaryButton" />
                                       <String fx:value="Button" />
